# Lenta-Tech-Life-Hack-2026

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  Lenta_Shelf_AI_presentation.pptx  Makefile  README.md  app.py  pyproject.toml  requirements-easyocr.txt  requirements-full-windows.txt  requirements-full.txt  requirements-kaggle-safe.txt  requirements-train.txt  requirements.txt
colab/: README.md  lenta_colab_compare_runs.ipynb  lenta_colab_exp_a_fallback_gated.ipynb  lenta_colab_exp_b_zonal_qr_ocr.ipynb  lenta_colab_exp_b_zonal_qr_ocr_v2_fixed.ipynb  lenta_colab_exp_b_zonal_qr_ocr_v3_bundlefix.ipynb  lenta_colab_exp_b_zonal_qr_ocr_v4_colabpaths.ipynb  lenta_colab_exp_c_selftrain_detector.ipynb
configs/: default.yaml
docs/: architecture.md  data_profile.json  data_profile.md  deploy_huggingface_spaces.md  self_critique.md  yolov8n_detector_20260514.md
examples/: sample_fast_output_43_15_one_frame.csv
kaggle/: gpu_experiment.py
lenta_shelf_ai/: __init__.py  catalog.py  detectors.py  evaluation.py  focus.py  ocr.py  parsers.py  pipeline.py  qr.py  qr_worker.py  schema.py  tracker.py  utils.py  video.py  visualization.py  zones.py
models/: README.md
notebook/: OCR.ipynb  detection-price-tag.ipynb  qr-detect.ipynb  super-res.ipynb  yolo+esyocr.ipynb
scripts/: analyze_final_errors.py  analyze_public_data.py  benchmark_field_zones.py  benchmark_qr_crops.py  build_pseudo_yolo_dataset.py  build_yolo_dataset.py  evaluate_detector_recall.py  evaluate_on_public.py  export_edge.py  generate_colab_notebooks.py  infer_video.py  prepare_kaggle_bundle.py  (+6 more)
(+17 files in other folders)
