[project]
name = "lenta-shelf-ai"
version = "1.0.0"
description = "Offline price-tag detection and OCR pipeline for Lenta Tech shelf robot videos"
requires-python = ">=3.10"
authors = [{name = "Lenta Shelf AI Team"}]
dependencies = [
  "numpy>=1.26",
  "opencv-python-headless>=4.8",
  "pandas>=2.0",
  "pillow>=10.0",
  "pytesseract>=0.3.10",
  "pyzbar>=0.1.9",
  "gradio>=4.44",
  "PyYAML>=6.0",
  "scipy>=1.10",
]

[project.optional-dependencies]
full = ["ultralytics>=8.3.0", "paddleocr>=2.8.0", "paddlepaddle>=2.6.0", "zxing-cpp>=2.2.0", "rapidfuzz>=3.9.0", "onnxruntime>=1.18.0"]

[project.scripts]
lenta-infer = "lenta_shelf_ai.pipeline:main"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
